# desofs2024_M1B_3

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml
.github/: dependabot.yml  frontend-build.yml
.github/workflows/: backend.yaml  build_backend.yaml  deploy_backend.yaml  frontend-build.yml  frontend.yaml  frontend.yml  publish.yaml  publish.yml
Deliverables/Phase 1/: README.MD
backend/: .env  .env.development  Dockerfile.development  Dockerfile.production  README.md  docker-compose.yml  pyproject.toml
backend/src/backend/: main.py
backend/src/backend/application/: auth.py  exceptions.py  rbac.py  utils.py
backend/src/backend/domain/: hashtag.py  tweet.py  user.py
backend/src/backend/infrastructure/: config.py  logging.py  supabase_auth.py
backend/src/backend/infrastructure/repository/: hashtag_repository.py  tweet_repository.py
backend/src/backend/repository/: hashtag_repository.py  tweet_repository.py  user_repository.py
backend/src/backend/service/: hashtag_service.py  tweet_service.py  user_service.py
backend/tests/: test_routes.py
deliverables/phase_1/: README.MD
deliverables/phase_1/asvs/: v4-ASVS-checklist-en.xlsx
deliverables/phase_1/design/: admin_user_uc.puml  ban_status.puml  basic_user_uc.puml  deployment.puml  dfd.puml  domain_model.puml  infrastructure.drawio  premium_user_uc.puml  risk_matrix.drawio  tweet_interaction_uc.puml
deliverables/phase_1/threat-dragon/: SocialNet.json
deliverables/phase_2/SocialNet/: .coveragerc  .gitignore  Makefile  Pipfile  conftest.py  docker-compose.yml  runtests.py  setup.py  testgrpc.py
deliverables/phase_2/backend/: .dockerenv  .flake8  .gitmodules  README.md  alembic.ini  manage.py  pytest.ini  shell.py
deliverables/phase_2/frontend/: package-lock.json  package.json
deliverables/phase_2/sprint_1/: README.md
deliverables/phase_2/sprint_2/: README.md
frontend/: CHANGELOG.md  Dockerfile  README2.md  jest.config.js  package-lock.json  package.json  release.config.js  tailwind.config.js  tsconfig.json
frontend/components/: AuthButtons.tsx  Feed.tsx  Sidebar.tsx  SidebarRow.tsx  TrendTable.tsx  Tweet.tsx  Tweetbox.tsx  User.tsx  UserInfo.tsx  Widgets.tsx
frontend/components/__tests__/: Feed.test.tsx  Sidebar.test.tsx  SidebarRow.test.tsx  TrendTable.test.tsx  Tweet.test.tsx  UserInfo.test.tsx  Widgets.test.tsx
frontend/config/: noteKeywords.cjs  releaseRules.cjs
frontend/src/: middleware.ts
frontend/src/api/: deleteTweet.ts  fetchProfilePicture.ts  fetchTrends.ts  fetchTweets.ts  fetchTweetsByUser.ts  fetchUser.ts  (+3 more)
supabase/docker/: docker-compose.yml
(+129 files in other folders)
