[tool.poetry]
name = "SocialNet"
version = "0.1.0"
description = "A Twitter-like socal network"
authors = [
    "Paulo Moreira <1180778@isep.ipp.pt>",
    "Tomás Afonso Soares De Oliveira <1230213@isep.ipp.pt>",
    "Diogo Alexandre Pereira Ferreira <1230176@isep.ipp.pt>",
    "Luís Silva <1181031@isep.ipp.pt>",
]
readme = "README.md"
packages = [{ include = "backend", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
