[tool.poetry]
name = "SocialNet"
version = "0.1.0"
description = "A Twitter-like socal network"
authors = [
    "Paulo Moreira <1180778@isep.ipp.pt>",
    "Tomás Afonso Soares De Oliveira <1230213@isep.ipp.pt>",
    "Luís Silva <1181031@isep.ipp.pt>",
]
readme = "README.md"
packages = [{ include = "backend", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
pydantic = "^2.7.1"
supabase = "^2.4.3"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
pyjwt = "^2.8.0"
fastapi-limiter = "^0.1.6"
pytz = "^2024.1"
email-validator = "^2.1.1"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src"]

exclude = [
    ".direnv",
    ".git",
    ".py_cache",
    ".pyenv",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = ["F401"]
unfixable = []
